# nuopc_data_models

./: CMakeLists.txt
datm/cime_config/: buildnmlc
dice/cime_config/: buildnmlc
dlnd/cime_config/: buildnmlc
docn/cime_config/: buildnmlc
drof/cime_config/: buildnmlc
dshr/: CMakeLists.txt
dwav/cime_config/: buildnmlc
share/: CMakeLists.txt  CMakeLists.txt~
streams/: CMakeLists.txt
